# Trippy

./: README.md
scripts/: start.sh
src/: requirements.txt
src/trippy/: README.md  pyproject.toml
src/trippy/trippy_agent/: agent.py  prompt.py
src/trippy/trippy_agent/sub_agents/inspiration/: agent.py  prompt.py
src/trippy/trippy_agent/sub_agents/planning/: agent.py
src/trippy/trippy_agent/tools/: memory.py
